--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Basic HTML page</title>
 </head>
 <body>
+    <!--My information, Name, course, major and message-->
     <p>Name: Kevin Frazier</p>
     <p>Course: COP4813</p>
     <p>Computer Science </p> 
